--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,55 @@
+body {
+  background-color: #333
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  color: #6f9;
   display: flex;
+  min-height: 100vh;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding: 20px;
+  font-family: Faculty-Glyphic;
+}
+
+section {
+  padding: 200px 20px;
+  min-height: 100vh;
+  border: 1px groove #ccc
+}
+
+.section-wrapper {
+  background: transparent;
+  padding: 0;
+  margin: 0;
+  border: none;
+  width: auto;
+  height: auto;
+}
+
+.back-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #4CAF50;
   color: white;
+  padding: 10px 15px;
+  border-radius: 5px;
+  text-align: center;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  z-index: 1000;
+  opacity: 0.8;
+  transition: opacity 0.3x ease;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.back-to-top:hover {
+  opacity: 1;
 }
