--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -2,7 +2,6 @@
   background-color: #444;
   display: flex;
   justify-content: space-between;
-  align-items: center;
   padding: 1rem 2rem;
   position: static;
   width: 100%;
@@ -10,24 +9,27 @@
   z-index: 1000;
 }
 
+.logo {
+  color: #6f9;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
 .navbar {
+  top: 0;
   display: flex;
   gap: 20px;
   list-style: none;
   margin-left: auto;
-  justify-content: space-between
 }
 
-.navbar ScrollLink {
-  color: #6f9;
-
-}
 
 .nav-link {
   display: flex;
   gap: 1.5rem;
   text-decoration: none;
   font-weight: bold;
+  font-size: 1.5rem;
 }
 
 .nav-link:hover {
@@ -37,7 +39,10 @@
 
 @media (max-width: 768px) {
   .navbar {
-    flex-direction: column;
     align-items: center;
+  }
+
+  .nav-link {
+    font-size: 1rem;
   }
 }
