--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #333
+  background-color: #444
 }
 
 html {
@@ -21,11 +21,11 @@ img {
   align-items: center;
   padding: 20px;
   font-family: Faculty-Glyphic;
+  overflow-x: hidden;
 }
 
 section {
   min-height: 85vh;
-  /* border: 1px dotted #ccc */
 }
 
 .section-wrapper {
@@ -60,11 +60,17 @@ section {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 14px;
+  font-size: 1.5rem;
   z-index: 1000;
   opacity: 0.8;
   transition: opacity 0.3s ease;
 }
+
+.arrow {
+  font-size: 1.5rem;
+  transition: color 0.3s ease;
+}
+
 
 .back-to-top:hover {
   opacity: 1;
