--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -41,3 +41,11 @@
   transform: translateY(-10px);
   cursor: default;
 }
+
+.card-image {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
